samples/_failures_safe/1761480997_f824fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8dd7206a.c: In function ‘main’:
./samples/SAFE/__tmp_8dd7206a.c:154:17: error: expected declaration or statement at end of input
  154 |                 } else {
      |                 ^
./samples/SAFE/__tmp_8dd7206a.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8dd7206a.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8dd7206a.c:154:17: error: expected declaration or statement at end of input
